--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.1
   google_fonts: ^3.0.1
+  firebase_core: ^1.19.2
+  firebase_auth: ^3.4.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
