--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,9 @@ dependencies:
   firebase_core: ^1.19.2
   firebase_auth: ^3.4.2
   shared_preferences: ^2.0.15
-  provider: ^6.0.3
   firebase_database: ^9.0.20
   json_annotation: ^4.6.0
+  flutter_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
