Fixed issues with profile creation and switched from RealTime database to FireStore.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.1
   google_fonts: ^3.0.1
-  firebase_core: ^1.19.2
-  firebase_auth: ^3.4.2
+  firebase_auth: ^4.2.0
   shared_preferences: ^2.0.15
-  firebase_database: ^9.0.20
+  firebase_database: ^10.0.7
   json_annotation: ^4.6.0
   flutter_riverpod: ^2.1.1
+  firebase_core: ^2.4.0
+  cloud_firestore: ^4.2.0
+
 
 dev_dependencies:
   flutter_test:
