--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_riverpod: ^2.1.1
   firebase_core: ^2.4.0
   cloud_firestore: ^4.2.0
+  internet_connection_checker: ^0.0.1+4
 
 
 dev_dependencies:
