--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^2.4.0
   cloud_firestore: ^4.2.0
   internet_connection_checker: ^0.0.1+4
+  permission_handler: ^10.2.0
 
 
 dev_dependencies:
