--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^1.1.1
-  google_fonts: ^3.0.1
+  flutter_svg: ^2.0.4
+  google_fonts: ^4.0.3
   firebase_auth: ^4.2.0
   shared_preferences: ^2.0.15
   firebase_database: ^10.0.7
@@ -43,8 +43,10 @@ dependencies:
   flutter_riverpod: ^2.1.1
   firebase_core: ^2.4.0
   cloud_firestore: ^4.2.0
-  internet_connection_checker: ^0.0.1+4
+  internet_connection_checker: ^1.0.0+1
   permission_handler: ^10.2.0
+  contacts_service: ^0.6.3
+  dynamic_color: ^1.6.2
 
 
 dev_dependencies:
