--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_svg: ^2.0.4
+  flutter_svg: ^2.0.5
   google_fonts: ^4.0.3
   firebase_auth: ^4.2.0
   shared_preferences: ^2.0.15
@@ -47,6 +47,7 @@ dependencies:
   permission_handler: ^10.2.0
   contacts_service: ^0.6.3
   dynamic_color: ^1.6.2
+  flex_color_scheme: ^4.2.0
 
 
 dev_dependencies:
