--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   contacts_service: ^0.6.3
   dynamic_color: ^1.6.2
   flex_color_scheme: ^4.2.0
+  loading_indicator: ^3.1.0
 
 
 dev_dependencies:
